clean arch - product/images gateways/usecases tests